REGRESSION (r275496): WebSocket Message too long when message is larger than 1mb https://bugs.webkit.org/show_bug.cgi?id=227030 <rdar://problem/79370994>

Patch by Alex Christensen <achristensen@webkit.org> on 2021-06-21
Reviewed by Youenn Fablet.

Source/WebKit:

NSURLSession's WebSocket implementation currently has maximumMessageSize's default value at 1MB.
Our CFReadStream-based WebSocket implementation had no message size limitation, so set it to 0 to remove the limit.

Writing a test for this was tricky because our WebSocket LayoutTests use the deflate extension.  I wrote an API test
that implements a simple WebSocket exchange and verifies each byte is what we expect.
The test used to fail using our NSURLSession-based WebSocket implementation but now passes everywhere.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::createWebSocketTask):
Set maximumMessageSize to 0, which, as documented in ws_options.h but unfortunately not yet in NSURLSession.h:
"means there is no receive limit."
This matches our behavior with the CFReadStream-based WebSocket implementation.

Tools:

* TestWebKitAPI/SourcesCocoa.txt:
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WebSocket.mm: Added.
(TestWebKitAPI::TEST):
* TestWebKitAPI/cocoa/HTTPServer.h:
* TestWebKitAPI/cocoa/HTTPServer.mm:
(TestWebKitAPI::Connection::receiveBytes const):

Canonical link: https://commits.webkit.org/238989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279069 268f45cc-cd09-0410-ab3c-d52691b4dbfc